fix layout on mobile size

--- a/assets/styles/Global.less
+++ b/assets/styles/Global.less
@@ -7,15 +7,12 @@
     margin: 0;
 }
 
-#__next,
-body{
-    display: flex;
-    height: 100%;
-    width: 100%;
-}
 
 #__next {
     background-color: #000;
+    display: flex;
+    height: 100vh;
+    width: 100vw;
 }
 
 @import './Scrollbar.less';
