--- a/assets/styles/layout/AppContainer.less
+++ b/assets/styles/layout/AppContainer.less
@@ -15,7 +15,8 @@
 
 .nz-container {
     position: relative;
-    flex: 1;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     
 }
